# fbk-test_task

./: .gitignore  Makefile  README.md
app/: Dockerfile  Makefile  pyproject.toml  requirements.txt
app/src/: __init__.py  config.py  db.py  handlers.py
deployments/: docker-compose.yaml
deployments/db/: init.sql
deployments/nginx/: Dockerfile  app.conf
docs/: 01-task.md
